Language and Module Visualization #10 +) path streams contains structure to visualize the given attribute +) add raise and reset of data stream on hover/leave ~) river chart contains hard break on data stream end -) ci offset bug -) data scale incorrect ~) contains mocked data

--- a/ui/src/components/DataRiverChart/data-river-chart.component.scss
+++ b/ui/src/components/DataRiverChart/data-river-chart.component.scss
@@ -10,6 +10,7 @@
 
 .layer{
   pointer-events:all;
+  stroke-width: 1px;
 }
 
 .tooltip{
@@ -32,7 +33,7 @@
     border-bottom: 1px solid;
 
     .additional {
-      padding: 5px;
+      padding: 3px;
       border-radius: 5px;
       text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
       color:white;
@@ -42,6 +43,7 @@
       text-align: center;
       display: inline-flex;
       flex-flow: column;
+      //border: 3px solid;
     }
 
     .name {
